# ImmutableString

./: .gitignore  CMakeLists.txt  README.md
include/immutable_string/: shared_data.hxx  string.hxx
tests/: CMakeLists.txt  common.h  main.cpp  shared_data.cpp  string.cpp  string_benchmark.cpp
